@@ -13,3 +13,4 @@ Categories=X-XFCE;Settings;DesktopSettings;X-XfceSettingsDialog;
 OnlyShowIn=XFCE;
 StartupNotify=true
 X-XfcePluggable=true
+X-XfceHelpFile=xfdesktop.html
