@@ -33,6 +33,7 @@ Xfce 4.6beta1 (Xfce 4.5.91):
     desktop icon text labels (bug 4412).  Patch from Andrea Santilli.
   * Add backdrop image preview to settings dialog.
   * Make settings dialog pluggable into the Xfce Settings Manager.
+  * Make the Help button in the settings dialog do something.
 
 
 Xfce 4.6alpha (Xfce 4.5.90):
